--- a/style.css
+++ b/style.css
@@ -171,6 +171,20 @@ ul {
   margin-right: auto;
 }
 
+.my-2 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.my-5 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.my-10 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
 .py-2 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -254,6 +268,13 @@ ul {
 .w-50 {
   width: 50%;
 }
+
+body {
+  width: 100%;
+  background: url('./assets/backgroundpng.png') no-repeat;
+  background-size: cover;
+}
+
 /* ------------ /Global Classes --------------- */
 
 /* ------------ Media Query --------------- */
@@ -265,6 +286,10 @@ ul {
   }
   .sm-text-xl {
     font-size: 3em;
+  }
+  .sm-px-10 {
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
   }
 }
 
@@ -279,6 +304,9 @@ ul {
   .md-mx-initial {
     margin: initial;
   }
+  .md-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
 }
 
 /* for large screen lg(1024px) */
@@ -291,6 +319,8 @@ ul {
   }
   #nav {
     flex-direction: row !important;
+    padding-left: 6rem !important;
+    padding-right: 6rem !important;
   }
   .collapse {
     max-height: initial !important;
@@ -308,6 +338,10 @@ ul {
 
   .lg-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
 
@@ -467,3 +501,77 @@ ul {
 }
 
 /* ------------ /Counting area Style --------------- */
+
+/* ------------  Card area Style --------------- */
+#site-main .card-area .grid {
+  column-gap: 4em;
+  row-gap: 2em;
+}
+/* ------------ /Card area Style --------------- */
+
+/* ------------  Recent work area Style --------------- */
+#site-main .recent-work-area .images-flex .flex-item {
+  width: 360px;
+  margin-bottom: 50px;
+}
+
+#site-main .recent-work-area .images-flex .flex-item img {
+  border-radius: 10px;
+}
+
+/* ------------  /Recent work area Style --------------- */
+
+/* ------------  Card area Style --------------- */
+#site-main .article-area .grid {
+  column-gap: 5em;
+}
+#site-main .article-area .card article {
+  border-radius: 10px;
+}
+
+/* ------------  /Card area Style --------------- */
+
+/* ------------  Ready area Style --------------- */
+#site-main .ready-area .flex {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+/* ------------  /Ready area Style --------------- */
+
+/* ------------  Footer Style --------------- */
+#footer {
+  border-top: 2px solid var(--text-light);
+  margin-top: 8em;
+}
+#footer .grid {
+  column-gap: 3em;
+  padding: 6em 0;
+  border-bottom: 2px solid var(--text-light);
+}
+#footer .grid input.subscribe-text {
+  border: none;
+  background-color: var(--text-light);
+  padding: 1em;
+  font-size: 1em;
+  color: var(--text-dark2);
+  font-family: var(--font-poppins);
+}
+#footer .grid input.subscribe-text:focus {
+  border: none;
+  outline: none;
+}
+#footer .grid button.btn-go {
+  background-color: var(--text-light);
+  padding: 0 2em;
+  font-family: var(--font-poppins);
+  font-weight: bold;
+}
+
+#footer .grid button.btn-go:hover {
+  background-color: var(--text-dark2);
+  color: var(--text-white);
+}
+
+/* ------------  /Footer Style --------------- */
